--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://github.com/nyiyezin/fem-frontend-quiz-app",
-  "name": "fem-frontend-quiz-app",
+  "homepage": "https://github.com/nyiyezin/frontend-quiz-app",
+  "name": "frontend-quiz-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
